--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
               min="1"
               max="50"
             />
+            <label>
+              <input class="passform__length" type="text" />
+              Length of password
+            </label>
             <div class="passform__chboxes__wrapper">
               <label class="passform__chboxes__container" for="">
                 Include Letters a,b,c,d,e
