--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <input
               class="passform__input__range"
               type="range"
+              value="16"
               min="1"
               max="50"
             />
